# patch-import

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/patch_import/: __init__.py  patch_import__fixtures.py  patch_import_itself.py
tests/: pytest__patch_import.py
